--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Md Masudur
-middle_name: 
+middle_name:
 last_name: Rahman
-email: you@example.com
+email: rahman64@purdue.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
